--- a/assets/css/elementos/vertical-tabs.css
+++ b/assets/css/elementos/vertical-tabs.css
@@ -9,7 +9,7 @@
     border: 1px solid #ccc;
     background-color: #f1f1f1;
     width: 30%;
-    height: 300px;
+    height: 100%;
 }
 
 /* Style the buttons that are used to open the tab content */
@@ -47,5 +47,6 @@
     border: 1px solid #ccc;
     width: 70%;
     border-left: none;
-    height: 300px;
+    height: 100%;
+    /* height: 300px; */
 }
