--- a/assets/css/themes/lyt1-theme-1.css
+++ b/assets/css/themes/lyt1-theme-1.css
@@ -24,7 +24,7 @@ body, #app {
 }
 
 .navbar .navbar-header {
-  background: #2C2F3B !important;
+  background: #1d2f3b !important;
   border-right-color: transparent !important;
   border-bottom-color: transparent !important;
 }
@@ -68,7 +68,7 @@ body, #app {
   color: #ffffff !important;
 }
 .navbar .navbar-collapse {
-  background: #2C2F3B !important;
+  background: #1d2f3b !important;
   border-bottom-color: transparent !important;
   box-shadow: none !important;
 }
@@ -125,7 +125,7 @@ body, #app {
   }
 }
 .navbar .navbar-collapse .navbar-left > li.sidebar-toggler-wrapper .btn {
-  background-color: #C82E29;
+  background-color: transparent !important;
   border-color: #C82E29;
   color: #ffffff !important;
 }
@@ -133,7 +133,7 @@ body, #app {
   color: #ffffff !important;
 }
 .navbar .navbar-collapse .navbar-left > li.sidebar-toggler-wrapper .btn:hover {
-  background-color: #da4f4a !important;
+  background-color: transparent !important;
   border-color: #da4f4a;
   color: #ffffff !important;
 }
@@ -242,7 +242,7 @@ body, #app {
 }
 
 #sidebar {
-  background: #2C2F3B;
+  background: transparent;
 }
 @media (min-width: 992px) {
   #sidebar:before {
