--- a/assets/css/themes/lyt1-theme-1.css
+++ b/assets/css/themes/lyt1-theme-1.css
@@ -13,9 +13,9 @@
   color: #ffffff;
 }
 
-body, #app {
+/* body, #app {
   background: #F9F9F9;
-}
+} */
 
 @media (max-width: 991px) {
   .app-content {
@@ -258,18 +258,18 @@ body, #app {
   background: #2C2F3B !important;
 }
 #sidebar .sidebar-container {
-  background: #D7D6DB !important;
+  background: white !important;
 }
 #sidebar > div nav .navbar-title {
   color: #666;
 }
 @media (min-width: 992px) {
-  #sidebar > div nav:before {
+  /* #sidebar > div nav:before {
     background: #2C2F3B;
   }
   #sidebar > div nav:after {
     background: #D7D6DB;
-  }
+  } */
 }
 #sidebar > div nav > ul > li a {
   color: #666;
